[package]
name = "compsoc-game-jam"
version = "0.1.0"
authors = ["Ben Simms <ben@bensimms.moe>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { git = "https://github.com/bevyengine/bevy", rev = "89a41bc62843be5f92b4b978f6d801af4de14a2d" }
rand = "0.8.3"
